--- a/style/newsprint.css
+++ b/style/newsprint.css
@@ -64,9 +64,9 @@ html, body {
  	}
 }*/
 
-#write {
+/* #write {
 	max-width: 40em;
-}
+} */
 
 ol,
 ul {
