--- a/style/whitey.css
+++ b/style/whitey.css
@@ -13,9 +13,6 @@ body {
 	text-align: justify;
 }
 #write {
-	max-width: 40em;
-	margin: 0 auto;
-	margin-bottom: 2em;
 	line-height: 1.53;
 }
 
